# mediasoup-sfu-cpp

./: .gitignore  CMakeLists.txt  README.cn.md  README.en.md  README.md  build.sh  builddeps.sh  config.json  genvs2019.bat  genvs2022.bat  genxcode.sh  setarmenv.sh  setmipsenv.sh  setupubuntu.sh
cmake/: llvm.toolchain.cmake
demo/: AppComponent.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Peer.cpp  Peer.hpp  Room.hpp  RoomOld.cpp  RoomOld.hpp  Server.cpp  Server.hpp  Transfmt.cpp  Transfmt.hpp  config.json  main.cpp
demo/controller/: RoomsController.hpp  StatisticsController.hpp
demo/dto/: Config.hpp  ConfigDto.hpp  DTOs.hpp
demo/rooms/: Lobby.cpp  Lobby.hpp  Message.cpp  Message.h  Peer.cpp  Peer.hpp  Room.cpp  Room.hpp
demo/utils/: Nickname.cpp  Nickname.hpp  Statistics.cpp  Statistics.hpp  util.cpp  util.h
lib/: readme.md
lib/win/x64/: absl_bad_optional_access.lib  absl_bad_variant_access.lib  absl_base.lib  absl_internal_bad_any_cast_impl.lib  absl_internal_throw_delegate.lib  absl_optional.lib  absl_strings.lib  avcodec.lib  avfilter.lib  avformat.lib  avutil.lib  boost_atomic-vc140-mt.lib  boost_chrono-vc140-mt.lib  boost_container-vc140-mt.lib  boost_context-vc140-mt.lib  boost_coroutine-vc140-mt.lib  boost_date_time-vc140-mt.lib  boost_exception-vc140-mt.lib  boost_math_c99-vc140-mt.lib  boost_math_c99f-vc140-mt.lib  boost_math_c99l-vc140-mt.lib  boost_math_tr1-vc140-mt.lib  boost_math_tr1f-vc140-mt.lib  boost_math_tr1l-vc140-mt.lib  boost_random-vc140-mt.lib  boost_regex-vc140-mt.lib  boost_system-vc140-mt.lib  boost_thread-vc140-mt.lib  getopt.lib  libcrypto.lib  netstring.lib  oatpp-libressl.lib  oatpp-openssl.lib  srtp2.lib  ssl-50.lib  usrsctp.lib  uv.lib  uv_a.lib
mediasoup/: AudioLevelObserver.hpp  CMakeLists.txt  ChannelAgent.cpp  ChannelAgent.hpp  Consumer.hpp  DataConsumer.hpp  DataProducer.hpp  DirectTransport.hpp  EnhancedEventEmitter.hpp  EventEmitterEx.hpp  IMediasoup.hpp  IWorker.hpp  JsonConvert.cpp  Log.cpp  Log.hpp  LoggerC.cpp  LoggerC.hpp  MediaSoupClientErrors.hpp  Mediasoup.cpp  Mediasoup.hpp  PayloadChannelAgent.cpp  PayloadChannelAgent.hpp  PipeTransport.hpp  PlainTransport.hpp  Producer.hpp  Promise.hpp  PullTransport.hpp  PushTransport.hpp  Router.hpp  RtpObserver.hpp  RtpParameters.hpp  SctpParameters.hpp  Singleton.hpp  SrtpParameters.hpp  SupportedRtpCapabilities.cpp  SupportedRtpCapabilities.hpp  Transport.hpp  UtilsC.hpp  Version.hpp  WebRtcTransport.hpp  (+10 more)
mediasoup/common/: AutoRelease.hpp  CommonObserver.hpp
mediasoup/promise/: allocator.hpp  any.hpp  debug.hpp  list.hpp  misc.hpp  stack.hpp  std_addon.hpp
mediasoup/sdp/: MediaSection.cpp  RemoteSdp.cpp  RemoteSdp.hpp  SdpOffer.cpp  SdpOffer.hpp  SdpUtils.cpp  SdpUtils.hpp  h264_profile_level_id.cc  h264_profile_level_id.h
mediasoup/util/: Process.cpp  Process.hpp  composition.hpp  event.hpp  event_emitter.hpp  subscription.hpp  timer.cpp  timer.hpp
mediasoup/uv/: UVPipeWrapper.cpp  UVPipeWrapper.hpp
protoo/: CMakeLists.txt  Message.cpp  Message.h  Peer.cpp  Peer.h  Room.cpp  Room.h  build.sh
protoo/Transport/: HttpTransport.cpp  HttpTransport.h  WebSocketServer.cpp  WebSocketServer.h  WebSocketTransport.cpp  WebSocketTransport.h
protoo/utils/: EventEmitter.hpp  Log.hpp  PeerTimer.cpp
release/lib/cmake/Catch2/: Catch2ConfigVersion.cmake
release/lib/cmake/nlohmann_json/: nlohmann_jsonTargets.cmake
release/lib/pkgconfig/: libcrypto.pc  libssl.pc  libuv.pc  nlohmann_json.pc  openssl.pc
release/share/doc/openssl/html/man1/: CA.pl.html  asn1parse.html  ca.html  ciphers.html  cms.html  crl.html  crl2pkcs7.html  dgst.html  dhparam.html  dsa.html  dsaparam.html  ec.html  ecparam.html  enc.html  engine.html  errstr.html  gendsa.html  genpkey.html  genrsa.html  list.html  nseq.html  ocsp.html  openssl.html  passwd.html  (+26 more)
release/share/man/man1/: CA.pl.1  asn1parse.1  ca.1  ciphers.1  cms.1  crl.1  crl2pkcs7.1  dgst.1  dhparam.1  dsa.1  dsaparam.1  ec.1  ecparam.1  enc.1  engine.1  errstr.1  gendsa.1  genpkey.1  genrsa.1  list.1  nseq.1  ocsp.1  openssl.1  passwd.1  pkcs12.1  pkcs7.1  pkcs8.1  pkey.1  pkeyparam.1  pkeyutl.1  prime.1  rand.1  rehash.1  req.1  rsa.1  rsautl.1  s_client.1  s_server.1  s_time.1  sess_id.1  (+10 more)
release/share/man/man3/: ADMISSIONS.3  ASN1_INTEGER_get_int64.3  ASN1_ITEM_lookup.3  ASN1_OBJECT_new.3  ASN1_STRING_TABLE_add.3  ASN1_STRING_length.3  ASN1_STRING_new.3  ASN1_STRING_print_ex.3  ASN1_TIME_set.3  ASN1_TYPE_get.3  ASN1_generate_nconf.3  ASYNC_WAIT_CTX_new.3  ASYNC_start_job.3  BF_encrypt.3  BIO_ADDR.3  BIO_ADDRINFO.3  BIO_connect.3  BIO_ctrl.3  BIO_f_base64.3  BIO_f_buffer.3  BIO_f_cipher.3  BIO_f_md.3  BIO_f_null.3  BIO_f_ssl.3  BIO_find_type.3  BIO_get_data.3  BIO_get_ex_new_index.3  BIO_meth_new.3  BIO_new.3  BIO_new_CMS.3  BIO_parse_hostserv.3  BIO_printf.3  BIO_push.3  BIO_read.3  BIO_s_accept.3  BIO_s_bio.3  BIO_s_connect.3  BIO_s_fd.3  BIO_s_file.3  BIO_s_mem.3  (+426 more)
release/share/man/man5/: config.5  x509v3_config.5
release/share/man/man7/: Ed25519.7  RAND.7  RAND_DRBG.7  RSA-PSS.7  SM2.7  X25519.7  bio.7  crypto.7  ct.7  des_modes.7  evp.7  ossl_store-file.7  ossl_store.7  passphrase-encoding.7  proxy-certificates.7  scrypt.7  ssl.7  x509.7
release/share/pkgconfig/: catch2.pc
script/: buildabsl.sh  buildboost.sh  buildcatch.sh  buildjson.sh  buildlibressl.sh  buildmediasoup.sh  buildnetstring.sh  buildoatpp.sh  buildoatppopenssl.sh  buildoatppressl.sh  buildoatppwebsocket.sh  buildopenssl.sh  buildprotoo.sh  buildsdp.sh  buildsrtp.sh  buildusrsctp.sh  builduv.sh  buildwebrtc.sh  buildwebservice.sh  buildworker.sh
worker/: CMakeLists.txt  build.sh
worker/include/: DepLibSRTP.hpp  Logger.hpp  Settings.hpp
worker/include/Channel/: Request.hpp
worker/include/RTC/: PullTransport.hpp  PushTransport.hpp  SrtpSession.hpp
worker/include/RTC/Codecs/: H265.hpp  Tools.hpp
worker/src/: Settings.cpp  Worker.cpp  main.cpp
worker/src/Channel/: Request.cpp  UnixStreamSocket.cpp
worker/src/RTC/: DtlsTransport.cpp  PlainTransport.cpp  PullTransport.cpp  PushTransport.cpp  Router.cpp
worker/src/RTC/Codecs/: H264.cpp  H265.cpp
(+486 files in other folders)
